--- a/data_structures/datastructures.html
+++ b/data_structures/datastructures.html
@@ -7,8 +7,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
     <title>Data Structures &mdash; libxmlquery v0.1.4 documentation</title>
-    <link rel="stylesheet" href="../_static/nature.css" type="text/css" />
-    <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="../sphinx_static/nature.css" type="text/css" />
+    <link rel="stylesheet" href="../sphinx_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
@@ -18,9 +18,9 @@
         HAS_SOURCE:  true
       };
     </script>
-    <script type="text/javascript" src="../_static/jquery.js"></script>
-    <script type="text/javascript" src="../_static/underscore.js"></script>
-    <script type="text/javascript" src="../_static/doctools.js"></script>
+    <script type="text/javascript" src="../sphinx_static/jquery.js"></script>
+    <script type="text/javascript" src="../sphinx_static/underscore.js"></script>
+    <script type="text/javascript" src="../sphinx_static/doctools.js"></script>
     <link rel="top" title="libxmlquery v0.1.4 documentation" href="../index.html" />
     <link rel="next" title="Special Macros" href="../macros.h.html" />
     <link rel="prev" title="Querying" href="../querying.html" /> 
@@ -557,7 +557,7 @@ void <tt class="descname">destroy_iterator</tt><big>(</big><a class="reference i
                         title="next chapter">Special Macros</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
-    <li><a href="../_sources/data_structures/datastructures.txt"
+    <li><a href="../sphinx_sources/data_structures/datastructures.txt"
            rel="nofollow">Show Source</a></li>
   </ul>
 <div id="searchbox" style="display: none">
