--- a/querying.html
+++ b/querying.html
@@ -7,8 +7,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
     <title>Querying &mdash; libxmlquery v0.1.4 documentation</title>
-    <link rel="stylesheet" href="_static/nature.css" type="text/css" />
-    <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="sphinx_static/nature.css" type="text/css" />
+    <link rel="stylesheet" href="sphinx_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
@@ -18,9 +18,9 @@
         HAS_SOURCE:  true
       };
     </script>
-    <script type="text/javascript" src="_static/jquery.js"></script>
-    <script type="text/javascript" src="_static/underscore.js"></script>
-    <script type="text/javascript" src="_static/doctools.js"></script>
+    <script type="text/javascript" src="sphinx_static/jquery.js"></script>
+    <script type="text/javascript" src="sphinx_static/underscore.js"></script>
+    <script type="text/javascript" src="sphinx_static/doctools.js"></script>
     <link rel="top" title="libxmlquery v0.1.4 documentation" href="index.html" />
     <link rel="next" title="Data Structures" href="data_structures/datastructures.html" />
     <link rel="prev" title="Document Object Model" href="dom.html" /> 
@@ -146,7 +146,7 @@ the <em>only child</em> of its parent node.</p>
                         title="next chapter">Data Structures</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
-    <li><a href="_sources/querying.txt"
+    <li><a href="sphinx_sources/querying.txt"
            rel="nofollow">Show Source</a></li>
   </ul>
 <div id="searchbox" style="display: none">
