--- a/macros.h.html
+++ b/macros.h.html
@@ -7,8 +7,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
     <title>Special Macros &mdash; libxmlquery v0.1.4 documentation</title>
-    <link rel="stylesheet" href="_static/nature.css" type="text/css" />
-    <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="sphinx_static/nature.css" type="text/css" />
+    <link rel="stylesheet" href="sphinx_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
@@ -18,9 +18,9 @@
         HAS_SOURCE:  true
       };
     </script>
-    <script type="text/javascript" src="_static/jquery.js"></script>
-    <script type="text/javascript" src="_static/underscore.js"></script>
-    <script type="text/javascript" src="_static/doctools.js"></script>
+    <script type="text/javascript" src="sphinx_static/jquery.js"></script>
+    <script type="text/javascript" src="sphinx_static/underscore.js"></script>
+    <script type="text/javascript" src="sphinx_static/doctools.js"></script>
     <link rel="top" title="libxmlquery v0.1.4 documentation" href="index.html" />
     <link rel="prev" title="Data Structures" href="data_structures/datastructures.html" /> 
   </head>
@@ -158,7 +158,7 @@ static inline void* <tt class="descname">__alloc</tt><big>(</big>void*<em> x</em
                         title="previous chapter">Data Structures</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
-    <li><a href="_sources/macros.h.txt"
+    <li><a href="sphinx_sources/macros.h.txt"
            rel="nofollow">Show Source</a></li>
   </ul>
 <div id="searchbox" style="display: none">
