--- a/genindex.html
+++ b/genindex.html
@@ -7,8 +7,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
     <title>Index &mdash; libxmlquery v0.1.4 documentation</title>
-    <link rel="stylesheet" href="sphinx_static/nature.css" type="text/css" />
-    <link rel="stylesheet" href="sphinx_static/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="lxq_static/nature.css" type="text/css" />
+    <link rel="stylesheet" href="lxq_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
@@ -18,9 +18,9 @@
         HAS_SOURCE:  true
       };
     </script>
-    <script type="text/javascript" src="sphinx_static/jquery.js"></script>
-    <script type="text/javascript" src="sphinx_static/underscore.js"></script>
-    <script type="text/javascript" src="sphinx_static/doctools.js"></script>
+    <script type="text/javascript" src="lxq_static/jquery.js"></script>
+    <script type="text/javascript" src="lxq_static/underscore.js"></script>
+    <script type="text/javascript" src="lxq_static/doctools.js"></script>
     <link rel="top" title="libxmlquery v0.1.4 documentation" href="index.html" /> 
   </head>
   <body>
@@ -43,7 +43,7 @@
    <h1 id="index">Index</h1>
 
    <div class="genindex-jumpbox">
-   <a href="#_"><strong>_</strong></a> | <a href="#A"><strong>A</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#L"><strong>L</strong></a> | <a href="#N"><strong>N</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a> | <a href="#X"><strong>X</strong></a> 
+   <a href="#_"><strong>_</strong></a> | <a href="#A"><strong>A</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#E"><strong>E</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#L"><strong>L</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#N"><strong>N</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a> | <a href="#X"><strong>X</strong></a> 
    </div>
 <h2 id="_">_</h2>
 <table width="100%" class="indextable genindextable"><tr>
@@ -55,43 +55,141 @@
 <h2 id="A">A</h2>
 <table width="100%" class="indextable genindextable"><tr>
   <td width="33%" valign="top"><dl>
+    <dt><a href="dom.html#add_attribute">add_attribute (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#add_element">add_element (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#add_element_with_type">add_element_with_type (C function)</a></dt>
     <dt><a href="macros.h.html#alloc">alloc (C macro)</a></dt>
+</dl></td>
+  <td width="33%" valign="top"><dl>
+    <dt><a href="dom.html#append_child">append_child (C function)</a></dt>
+    <dt><a href="dom.html#append_children">append_children (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#append_element">append_element (C function)</a></dt>
 </dl></td>
 </tr></table>
 
 <h2 id="D">D</h2>
 <table width="100%" class="indextable genindextable"><tr>
   <td width="33%" valign="top"><dl>
-    <dt><a href="data_structures/datastructures.html#destroy_iterator">destroy_iterator (C function)</a></dt>
-    <dt><a href="data_structures/datastructures.html#destroy_rbtree">destroy_rbtree (C function)</a></dt>
+    <dt><a href="dom.html#delete_attribute">delete_attribute (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#dequeue">dequeue (C function)</a></dt>
+    <dt><a href="dom.html#destroy_dom_node">destroy_dom_node (C function)</a></dt>
+    <dt><a href="dom.html#destroy_dom_tree">destroy_dom_tree (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#destroy_generic_list">destroy_generic_list (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#destroy_generic_list_iterator">destroy_generic_list_iterator (C function)</a></dt>
 </dl></td>
   <td width="33%" valign="top"><dl>
+    <dt><a href="data_structures/datastructures.html#destroy_iterator">destroy_iterator (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#destroy_rbtree">destroy_rbtree (C function)</a></dt>
+    <dt><a href="dom.html#doc">doc (C type)</a></dt>
     <dt><a href="dom.html#dom_node">dom_node (C type)</a></dt>
+    <dt><a href="data_structures/datastructures.html#duplicate_generic_list">duplicate_generic_list (C function)</a></dt>
+</dl></td>
+</tr></table>
+
+<h2 id="E">E</h2>
+<table width="100%" class="indextable genindextable"><tr>
+  <td width="33%" valign="top"><dl>
+    <dt><a href="data_structures/datastructures.html#enqueue">enqueue (C function)</a></dt>
+</dl></td>
+  <td width="33%" valign="top"><dl>
+    <dt><a href="data_structures/datastructures.html#enqueue_with_type">enqueue_with_type (C function)</a></dt>
 </dl></td>
 </tr></table>
 
 <h2 id="G">G</h2>
 <table width="100%" class="indextable genindextable"><tr>
   <td width="33%" valign="top"><dl>
-    <dt><a href="data_structures/datastructures.html#generic_list">generic_list (C type)</a></dt>
+    <dt><a href="data_structures/datastructures.html#generic_list_get_count">generic_list_get_count (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#generic_list_is_empty">generic_list_is_empty (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#generic_list_iterator_has_next">generic_list_iterator_has_next (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#generic_list_iterator_next">generic_list_iterator_next (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#generic_list_s">generic_list_s (C type)</a></dt>
+    <dt><a href="dom.html#get_attribute_by_name">get_attribute_by_name (C function)</a></dt>
+    <dt><a href="dom.html#get_child_at">get_child_at (C function)</a></dt>
+    <dt><a href="dom.html#get_children">get_children (C function)</a></dt>
+    <dt><a href="dom.html#get_descendants">get_descendants (C function)</a></dt>
+    <dt><a href="dom.html#get_doc_root">get_doc_root (C function)</a></dt>
+</dl></td>
+  <td width="33%" valign="top"><dl>
+    <dt><a href="data_structures/datastructures.html#get_element_and_type_at">get_element_and_type_at (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#get_element_at">get_element_at (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#get_element_pos">get_element_pos (C function)</a></dt>
+    <dt><a href="dom.html#get_elements_by_name">get_elements_by_name (C function)</a></dt>
+    <dt><a href="dom.html#get_name">get_name (C function)</a></dt>
+    <dt><a href="dom.html#get_namespace">get_namespace (C function)</a></dt>
+    <dt><a href="dom.html#get_text_nodes">get_text_nodes (C function)</a></dt>
+    <dt><a href="dom.html#get_value">get_value (C function)</a></dt>
+    <dt><a href="dom.html#get_xml_declaration">get_xml_declaration (C function)</a></dt>
+</dl></td>
+</tr></table>
+
+<h2 id="I">I</h2>
+<table width="100%" class="indextable genindextable"><tr>
+  <td width="33%" valign="top"><dl>
+    <dt><a href="data_structures/datastructures.html#insert_element_at">insert_element_at (C function)</a></dt>
+</dl></td>
+  <td width="33%" valign="top"><dl>
+    <dt><a href="data_structures/datastructures.html#insert_element_with_type_at">insert_element_with_type_at (C function)</a></dt>
 </dl></td>
 </tr></table>
 
 <h2 id="L">L</h2>
 <table width="100%" class="indextable genindextable"><tr>
   <td width="33%" valign="top"><dl>
+    <dt><a href="data_structures/datastructures.html#list">list (C type)</a></dt>
+    <dt><a href="data_structures/datastructures.html#list_bucket">list_bucket (C type)</a></dt>
+</dl></td>
+  <td width="33%" valign="top"><dl>
     <dt><a href="macros.h.html#log">log (C macro)</a></dt>
+</dl></td>
+</tr></table>
+
+<h2 id="M">M</h2>
+<table width="100%" class="indextable genindextable"><tr>
+  <td width="33%" valign="top"><dl>
+    <dt><a href="data_structures/datastructures.html#merge_lists">merge_lists (C function)</a></dt>
 </dl></td>
 </tr></table>
 
 <h2 id="N">N</h2>
 <table width="100%" class="indextable genindextable"><tr>
   <td width="33%" valign="top"><dl>
-    <dt><a href="data_structures/datastructures.html#new_rbtree">new_rbtree (C function)</a></dt>
-    <dt><a href="data_structures/datastructures.html#new_simple_rbtree">new_simple_rbtree (C function)</a></dt>
+    <dt><a href="dom.html#new_attribute">new_attribute (C function)</a></dt>
+    <dt><a href="dom.html#new_cdata">new_cdata (C function)</a></dt>
+    <dt><a href="dom.html#new_document">new_document (C function)</a></dt>
+    <dt><a href="dom.html#new_element_node">new_element_node (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#new_generic_list">new_generic_list (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#new_generic_list_iterator">new_generic_list_iterator (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#new_queue">new_queue (C function)</a></dt>
 </dl></td>
   <td width="33%" valign="top"><dl>
+    <dt><a href="data_structures/datastructures.html#new_rbtree">new_rbtree (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#new_simple_rbtree">new_simple_rbtree (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#new_stack">new_stack (C function)</a></dt>
+    <dt><a href="dom.html#new_text_node">new_text_node (C function)</a></dt>
     <dt><a href="data_structures/datastructures.html#new_tree_iterator">new_tree_iterator (C function)</a></dt>
+    <dt><a href="dom.html#node_type">node_type (C type)</a></dt>
+</dl></td>
+</tr></table>
+
+<h2 id="P">P</h2>
+<table width="100%" class="indextable genindextable"><tr>
+  <td width="33%" valign="top"><dl>
+    <dt><a href="parser/parser.html#parse_file">parse_file (C function)</a></dt>
+    <dt><a href="parser/parser.html#parse_query">parse_query (C function)</a></dt>
+    <dt><a href="parser/parser.html#parse_string">parse_string (C function)</a></dt>
+    <dt><a href="parser/parser.html#parse_xml">parse_xml (C function)</a></dt>
+    <dt><a href="parser/parser.html#parse_xml_from_string">parse_xml_from_string (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#peek_element_type_at">peek_element_type_at (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#peek_queue_type">peek_queue_type (C function)</a></dt>
+</dl></td>
+  <td width="33%" valign="top"><dl>
+    <dt><a href="data_structures/datastructures.html#peek_stack_type">peek_stack_type (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#pop_stack">pop_stack (C function)</a></dt>
+    <dt><a href="dom.html#prepend_child">prepend_child (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#prepend_element">prepend_element (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#push_stack">push_stack (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#push_stack_type">push_stack_type (C function)</a></dt>
 </dl></td>
 </tr></table>
 
@@ -99,19 +197,35 @@
 <table width="100%" class="indextable genindextable"><tr>
   <td width="33%" valign="top"><dl>
     <dt><a href="data_structures/datastructures.html#rb_tree_delete">rb_tree_delete (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#rb_tree_insert">rb_tree_insert (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#remove_all">remove_all (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#remove_duplicates">remove_duplicates (C function)</a></dt>
 </dl></td>
   <td width="33%" valign="top"><dl>
-    <dt><a href="data_structures/datastructures.html#rb_tree_insert">rb_tree_insert (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#remove_element">remove_element (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#remove_element_at">remove_element_at (C function)</a></dt>
+    <dt><a href="dom.html#remove_node">remove_node (C function)</a></dt>
 </dl></td>
 </tr></table>
 
 <h2 id="S">S</h2>
 <table width="100%" class="indextable genindextable"><tr>
   <td width="33%" valign="top"><dl>
+    <dt><a href="dom.html#sdoc">sdoc (C type)</a></dt>
     <dt><a href="data_structures/datastructures.html#search_rbtree">search_rbtree (C function)</a></dt>
-    <dt><a href="data_structures/datastructures.html#siterator">siterator (C type)</a></dt>
+    <dt><a href="dom.html#set_doc_root">set_doc_root (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#set_element_at">set_element_at (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#set_element_with_type_at">set_element_with_type_at (C function)</a></dt>
+    <dt><a href="dom.html#set_name">set_name (C function)</a></dt>
+    <dt><a href="dom.html#set_namespace">set_namespace (C function)</a></dt>
+    <dt><a href="dom.html#set_parent">set_parent (C function)</a></dt>
 </dl></td>
   <td width="33%" valign="top"><dl>
+    <dt><a href="dom.html#set_value">set_value (C function)</a></dt>
+    <dt><a href="dom.html#set_xml_declaration">set_xml_declaration (C function)</a></dt>
+    <dt><a href="data_structures/datastructures.html#siterator">siterator (C type)</a></dt>
+    <dt><a href="dom.html#snode">snode (C type)</a></dt>
+    <dt><a href="data_structures/datastructures.html#sorted_insert_element_with_type">sorted_insert_element_with_type (C function)</a></dt>
     <dt><a href="data_structures/datastructures.html#sroot">sroot (C type)</a></dt>
     <dt><a href="data_structures/datastructures.html#stree_node">stree_node (C type)</a></dt>
 </dl></td>
