--- a/tutorial.html
+++ b/tutorial.html
@@ -7,8 +7,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
     <title>Tutorial &mdash; libxmlquery v0.1.4 documentation</title>
-    <link rel="stylesheet" href="sphinx_static/nature.css" type="text/css" />
-    <link rel="stylesheet" href="sphinx_static/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="lxq_static/nature.css" type="text/css" />
+    <link rel="stylesheet" href="lxq_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
@@ -18,11 +18,11 @@
         HAS_SOURCE:  true
       };
     </script>
-    <script type="text/javascript" src="sphinx_static/jquery.js"></script>
-    <script type="text/javascript" src="sphinx_static/underscore.js"></script>
-    <script type="text/javascript" src="sphinx_static/doctools.js"></script>
+    <script type="text/javascript" src="lxq_static/jquery.js"></script>
+    <script type="text/javascript" src="lxq_static/underscore.js"></script>
+    <script type="text/javascript" src="lxq_static/doctools.js"></script>
     <link rel="top" title="libxmlquery v0.1.4 documentation" href="index.html" />
-    <link rel="next" title="Document Object Model" href="dom.html" />
+    <link rel="next" title="Parser Module" href="parser/parser.html" />
     <link rel="prev" title="libxmlquery documentation" href="index.html" /> 
   </head>
   <body>
@@ -33,7 +33,7 @@
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="dom.html" title="Document Object Model"
+          <a href="parser/parser.html" title="Parser Module"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="index.html" title="libxmlquery documentation"
@@ -95,11 +95,11 @@ of the DOM (<strong>D</strong>ocument <strong>O</strong>bject <strong>M</strong>
   <p class="topless"><a href="index.html"
                         title="previous chapter">libxmlquery documentation</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="dom.html"
-                        title="next chapter">Document Object Model</a></p>
+  <p class="topless"><a href="parser/parser.html"
+                        title="next chapter">Parser Module</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
-    <li><a href="sphinx_sources/tutorial.txt"
+    <li><a href="lxq_sources/tutorial.txt"
            rel="nofollow">Show Source</a></li>
   </ul>
 <div id="searchbox" style="display: none">
@@ -126,7 +126,7 @@ of the DOM (<strong>D</strong>ocument <strong>O</strong>bject <strong>M</strong>
           <a href="genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="dom.html" title="Document Object Model"
+          <a href="parser/parser.html" title="Parser Module"
              >next</a> |</li>
         <li class="right" >
           <a href="index.html" title="libxmlquery documentation"
