--- a/search.html
+++ b/search.html
@@ -7,8 +7,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
     <title>Search &mdash; libxmlquery v0.1.4 documentation</title>
-    <link rel="stylesheet" href="sphinx_static/nature.css" type="text/css" />
-    <link rel="stylesheet" href="sphinx_static/pygments.css" type="text/css" />
+    <link rel="stylesheet" href="lxq_static/nature.css" type="text/css" />
+    <link rel="stylesheet" href="lxq_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
@@ -18,10 +18,10 @@
         HAS_SOURCE:  true
       };
     </script>
-    <script type="text/javascript" src="sphinx_static/jquery.js"></script>
-    <script type="text/javascript" src="sphinx_static/underscore.js"></script>
-    <script type="text/javascript" src="sphinx_static/doctools.js"></script>
-    <script type="text/javascript" src="sphinx_static/searchtools.js"></script>
+    <script type="text/javascript" src="lxq_static/jquery.js"></script>
+    <script type="text/javascript" src="lxq_static/underscore.js"></script>
+    <script type="text/javascript" src="lxq_static/doctools.js"></script>
+    <script type="text/javascript" src="lxq_static/searchtools.js"></script>
     <link rel="top" title="libxmlquery v0.1.4 documentation" href="index.html" />
   <script type="text/javascript">
     jQuery(function() { Search.loadIndex("searchindex.js"); });
